Fix overflow of section/page titles in Visor index

--- a/components/visor/_visor.scss
+++ b/components/visor/_visor.scss
@@ -331,6 +331,14 @@ li > .selectedNavItemVisor {
   min-height: 100vh ;  
 }
 
+.indexElementTitle {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: inline-block;
+    padding-right: 10px;
+    
+}
 // .visorwrapper #containedCanvas {
 //   min-height: 100%;  
 // }
